--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -2,7 +2,7 @@
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDT\\ \hline 1-abalone 3class &   0.58 &   0.62 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} &   0.58 &   0.64 &   0.65 & \textcolor{red}{\textbf{  0.57}} \\
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 1-abalone 3class &   0.58 &   0.62 & \textcolor{blue}{\textbf{  0.66}} & \textcolor{blue}{\textbf{  0.66}} &   0.58 &   0.64 &   0.65 & \textcolor{red}{\textbf{  0.57}} \\
 2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} &   0.68 &   0.72 & \textcolor{red}{\textbf{  0.66}} &   0.67 &   0.82 & \textcolor{black}{\textbf{  0.85}} &   0.68 \\
 3-artificial charact... &   0.55 &   0.56 &   0.50 & \underline{\textcolor{blue}{\textbf{  0.61}}} &   0.40 & \textcolor{black}{\textbf{  0.58}} &   0.56 & \textcolor{red}{\textbf{  0.29}} \\
 4-autoUniv au1 1000 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.66}}} &   0.55 &   0.54 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.62}} &   0.60 & \textcolor{red}{\textbf{  0.50}} \\
@@ -40,7 +40,7 @@
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDT\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 &   0.81 &   0.80 \\
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} &   0.81 & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} & \textcolor{blue}{\textbf{  0.82}} &   0.80 &   0.81 &   0.80 \\
 35-mfeat fourier &   0.80 & \textcolor{red}{\textbf{  0.75}} &   0.80 &   0.78 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.84}}} & \textcolor{black}{\textbf{  0.83}} &   0.76 \\
 36-molecular promotor... &   0.80 &   0.79 &   0.71 & \textcolor{red}{\textbf{  0.56}} &   0.90 & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.90 \\
 37-molecular splice j... & \textcolor{red}{\textbf{  0.79}} &   0.93 &   0.91 &   0.85 & \textcolor{black}{\textbf{  0.94}} &   0.93 & \underline{\textcolor{blue}{\textbf{  0.96}}} & \textcolor{black}{\textbf{  0.94}} \\
@@ -78,7 +78,7 @@
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c|c}
- & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDT\\ \hline 67-statlog vehicle si... &   0.70 &   0.70 & \textcolor{blue}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.78}} &   0.60 &   0.76 &   0.76 & \textcolor{red}{\textbf{  0.46}} \\
+ & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDTw\\ \hline 67-statlog vehicle si... &   0.70 &   0.70 & \textcolor{blue}{\textbf{  0.78}} & \textcolor{blue}{\textbf{  0.78}} &   0.60 &   0.76 &   0.76 & \textcolor{red}{\textbf{  0.46}} \\
 68-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.91}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.99 \\
 69-systhetic control &   0.97 & \textcolor{red}{\textbf{  0.89}} &   0.92 & \textcolor{red}{\textbf{  0.89}} &   0.96 & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.94 \\
 70-teaching assistant... & \textcolor{red}{\textbf{  0.40}} &   0.49 & \underline{\textcolor{blue}{\textbf{  0.53}}} & \textcolor{black}{\textbf{  0.50}} &   0.46 &   0.43 &   0.49 & \textcolor{black}{\textbf{  0.50}} \\
