--- a/experimentos.tex
+++ b/experimentos.tex
@@ -22,14 +22,36 @@ a parcela mais representativa das estratégias e algoritmos de aprendizado
 seja mantida.
 
 \subsection{Diversidade dos algoritmos de aprendizado}\label{algs}
-Uma forma indireta de ilustrar a diversidade entre os modelos gerados pelos diferentes algoritmos
-de aprendizado é por meio da similaridade entre suas acurácias.
-Ela é apresentada na Tabela \ref{passiveDists} de forma análoga à adotada por
+Uma forma indireta de ilustrar a diversidade entre os modelos gerados pelos diferentes
+vieses dos algoritmos de aprendizado é por meio da similaridade entre suas acurácias.
+Embora sem garantias, essa relação assume que, no caso extremo de similaridade total
+(acurácias idênticas em todas as bases),
+é razoável supor que os modelos estejam fazendo as mesmas predições ou tenham
+algum tipo de afinidade com cada tipo de base parecida.
+As similaridades são apresentadas na Tabela \ref{passiveDists} de forma análoga à adotada por
 \cite{brazdil1994analysis}.
-\input passiveDists
+% \input passiveDists
 % Brazdil faz tabela de distâncias pareadas com taxas de erro sendo
 % as dimensões, depois faz decomposição ortogonal para visualizar em duas dimensões.
 % Depois ele faz agrupamento hierárquico.
+\begin{table}[h]
+\caption{Similaridade entre algoritmos de aprendizado.
+\textit{Medida: acurácia balanceada em 94 bases de dados.
+O maior e o menor valor de cada linha
+está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}}
+respectivamente. Valores iguais ou acima de $0,50$ estão apenas em \textbf{negrito}.}}
+\begin{center}\begin{tabular}{lcc|cc|cc|cc}
+          & 5NN & C4.5w & CIELM & ELM & NB & RFw & SVM & VFDT \\5NN       & - &   0.47 & \textbf{  0.53} & \textbf{  0.50} &   0.46 & \textbf{  0.53} & \textcolor{blue}{\textbf{  0.55}} & \textcolor{red}{\textbf{  0.44}} \\
+C4.5w   &   0.47 & - &   0.48 &   0.47 & \textcolor{blue}{\textbf{  0.55}} & \textbf{  0.51} & \textbf{  0.50} & \textcolor{red}{\textbf{  0.43}} \\ \hline
+CIELM   & \textbf{  0.53} &   0.48 & - & \textcolor{blue}{\textbf{  0.64}} &   0.47 & \textcolor{red}{\textbf{  0.46}} & \textbf{  0.51} & \textcolor{red}{\textbf{  0.46}} \\
+ELM     & \textbf{  0.50} &   0.47 & \textcolor{blue}{\textbf{  0.64}} & - & \textcolor{red}{\textbf{  0.42}} &   0.45 & \textbf{  0.50} & \textcolor{red}{\textbf{  0.42}} \\ \hline
+NB      &   0.46 & \textcolor{blue}{\textbf{  0.55}} &   0.47 & \textcolor{red}{\textbf{  0.42}} & - &   0.47 &   0.46 &   0.47 \\
+RFw     & \textbf{  0.53} & \textbf{  0.51} &   0.46 &   0.45 &   0.47 & - & \textcolor{blue}{\textbf{  0.62}} & \textcolor{red}{\textbf{  0.40}} \\ \hline
+SVM     & \textbf{  0.55} & \textbf{  0.50} & \textbf{  0.51} & \textbf{  0.50} &   0.46 & \textcolor{blue}{\textbf{  0.62}} & - & \textcolor{red}{\textbf{  0.43}} \\
+VFDT    &   0.44 &   0.43 &   0.46 &   0.42 & \textcolor{blue}{\textbf{  0.47}} & \textcolor{red}{\textbf{  0.40}} &   0.43 & - \\ \hline
+\end{tabular}\label{passiveDists}
+\end{center}
+\end{table}
 Esses modelos são o resultado de treinamento passivo, ou seja, com todos os
 exemplos da reserva.
 Considerando-se cada base de dados uma dimensão,
@@ -63,25 +85,14 @@ em dois grupos, A e B, respectivamente:
 O primeiro grupo coincide com os algoritmos mais presentes no primeiro lugar
 conforme Tabela \ref{tab:friedClassif}.
 
-
 Na comparação um contra um da acurácia balanceada (Tabela \ref{tab:friedClassif}),
-RF vence todos os demais com significância estatística,
-provavelmente por se tratar de um \textit{ensemble}.
-C4.5 e 5NN também se destacam, em menor grau,
-seguidos de NB e VFDT.
-Esse destaque reforça a tabela de similaridade (Tabela \ref{passiveDists}),
-pois os melhores algoritmos (grupo A) são similares e os piores
-(IELM/CIELM e SVM) têm a menor similaridade em relação aos demais.
-Apesar disso, a existência de grupos distintos e de algoritmos com variados níveis
-de desempenho fornece uma diversidade mais representativa do que se
-apenas um único algoritmo fosse empregado arbitrariamente.
-Para aumentar a independência entre os algoritmos nos experimentos,
-optou-se por descartar os resultados referentes à IELM,
-por ser inferior à CIELM (Apêndice \ref{detalhes})
-e ambas possuírem uma proximidade excessiva com relação a princípio de funcionamento
-e desempenho.
-
-\ano{mudar para medir distancia apenas das passivas}
+RF vence todos os demais, exceto SVM, com significância estatística,
+provavelmente por se tratar de um comitê.
+SVM também se destaca, em menor grau.
+A distribuição das vitórias dos diferentes classificadores ao longo das bases de dados
+indica a existência de diversidade de viés.
+Assim, a adoção dos algoritmos é mais representativa do que
+apenas um único algoritmo arbitrário.
 
 % \input classifsFried
 \begin{table}[h]
@@ -127,52 +138,86 @@ analogamente à comparação na Seção \ref{algs},
 as similaridades entre estratégias foram calculadas
 por meio da distância $d(\bm{x},\bm{u}) \mid \bm{x},\bm{u} \in \mathbb{R}^{658}$
 entre acurácias balanceadas ao longo das $94$
-bases e $6$
-\ano{adicionar RF aos numeros acima, abaixo e tabela}
-algoritmos e são apresentadas na Tabela \ref{stratDists}.
+bases e $7$ algoritmos e são apresentadas na Tabela \ref{stratDists}.
+Estratégias específicas de um único tipo de aprendiz não foram incluídas nessa comparação.
 Os nomes de estratégias propostas estão em negrito.
 
 \afterpage{\clearpage\begin{landscape}
-\input stratDists
+% \input stratDists
+\begin{table}[h]
+\caption{Similaridade entre estratégias.
+\textit{Detalhes na Tabela \ref{passiveDists}.}}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|c}
+   & \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{GATUeuc}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} \\
+Rnd        & - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.59} & \textbf{  0.57} & \textbf{  0.51} &   0.44 &   0.45 &   0.44 & \textbf{  0.56} &   0.36 &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.38 &   0.38 &   0.46 &   0.37 \\
+Clu     & \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} & \textbf{  0.59} & \textbf{  0.52} &   0.48 &   0.49 &   0.48 & \textbf{  0.58} &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.41 &   0.40 & \textbf{  0.50} &   0.41 \\ \hline
+\textbf{ATUeuc} & \textbf{  0.59} & \textbf{  0.59} & - & \textcolor{blue}{\textbf{  0.74}} & \textbf{  0.57} &   0.47 &   0.48 &   0.47 & \textbf{  0.56} &   0.36 &   0.38 & \textcolor{red}{\textbf{  0.23}} &   0.41 &   0.41 &   0.41 &   0.45 &   0.36 \\
+\textbf{ATUman} & \textbf{  0.57} & \textbf{  0.59} & \textcolor{blue}{\textbf{  0.74}} & - & \textbf{  0.57} &   0.48 & \textbf{  0.50} &   0.47 & \textbf{  0.56} &   0.37 &   0.39 & \textcolor{red}{\textbf{  0.23}} &   0.42 &   0.42 &   0.41 &   0.46 &   0.37 \\ \hline
+\textbf{ATUmah} & \textbf{  0.51} & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.57}} & \textcolor{blue}{\textbf{  0.57}} & - &   0.44 &   0.45 & \textbf{  0.54} &   0.48 &   0.35 &   0.37 & \textcolor{red}{\textbf{  0.23}} &   0.39 &   0.39 &   0.44 &   0.43 &   0.36 \\
+\textbf{GATUeuc}        &   0.44 &   0.48 &   0.47 &   0.48 &   0.44 & - & \textcolor{blue}{\textbf{  0.70}} & \textbf{  0.52} &   0.47 &   0.41 &   0.43 & \textcolor{red}{\textbf{  0.24}} &   0.49 & \textbf{  0.50} &   0.45 &   0.45 &   0.38 \\ \hline
+\textbf{GATUman}        &   0.45 &   0.49 &   0.48 & \textbf{  0.50} &   0.45 & \textcolor{blue}{\textbf{  0.70}} & - & \textbf{  0.53} &   0.48 &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.24}} &   0.46 &   0.47 &   0.42 &   0.46 &   0.39 \\
+\textbf{GATUmah}        &   0.44 &   0.48 &   0.47 &   0.47 & \textcolor{blue}{\textbf{  0.54}} & \textbf{  0.52} & \textbf{  0.53} & - &   0.44 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.42 &   0.48 &   0.43 &   0.37 \\ \hline
+\textbf{SGmulti}       & \textbf{  0.56} & \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} & \textbf{  0.56} &   0.48 &   0.47 &   0.48 &   0.44 & - &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.25}} &   0.44 &   0.44 &   0.42 & \textbf{  0.50} &   0.39 \\
+Ent     &   0.36 &   0.38 &   0.36 &   0.37 &   0.35 &   0.41 &   0.40 &   0.37 &   0.40 & - & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.25}} &   0.48 &   0.46 &   0.42 &   0.41 &   0.34 \\ \hline
+Mar     &   0.36 &   0.39 &   0.38 &   0.39 &   0.37 &   0.43 &   0.42 &   0.38 &   0.42 & \textbf{  0.56} & - & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.57}} & \textbf{  0.56} &   0.46 &   0.44 &   0.36 \\
+DWeuc   &   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} &   0.24 &   0.24 &   0.24 & \textcolor{blue}{\textbf{  0.25}} & \textcolor{blue}{\textbf{  0.25}} &   0.24 & - &   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.24 & \textcolor{red}{\textbf{  0.23}} \\ \hline
+TUeuc   &   0.38 &   0.41 &   0.41 &   0.42 &   0.39 &   0.49 &   0.46 &   0.41 &   0.44 &   0.48 & \textbf{  0.57} & \textcolor{red}{\textbf{  0.24}} & - & \textcolor{blue}{\textbf{  0.70}} & \textbf{  0.50} &   0.44 &   0.36 \\
+TUman   &   0.38 &   0.41 &   0.41 &   0.42 &   0.39 & \textbf{  0.50} &   0.47 &   0.42 &   0.44 &   0.46 & \textbf{  0.56} & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.70}} & - & \textbf{  0.51} &   0.44 &   0.37 \\ \hline
+TUmah   &   0.38 &   0.40 &   0.41 &   0.41 &   0.44 &   0.45 &   0.42 &   0.48 &   0.42 &   0.42 &   0.46 & \textcolor{red}{\textbf{  0.23}} & \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} & - &   0.41 &   0.35 \\
+EERacu  &   0.46 & \textcolor{blue}{\textbf{  0.50}} &   0.45 &   0.46 &   0.43 &   0.45 &   0.46 &   0.43 & \textcolor{blue}{\textbf{  0.50}} &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.24}} &   0.44 &   0.44 &   0.41 & - &   0.44 \\ \hline
+EERent  &   0.37 &   0.41 &   0.36 &   0.37 &   0.36 &   0.38 &   0.39 &   0.37 &   0.39 &   0.34 &   0.36 & \textcolor{red}{\textbf{  0.23}} &   0.36 &   0.37 &   0.35 & \textcolor{blue}{\textbf{  0.44}} & - \\\end{tabular}}\label{stratDists}
+\end{center}
+\end{table}
 \end{landscape}\clearpage}
 
-As estratégias que embutem algum tipo de aleatoriedade
-(Rnd, Clu, EERent, EERacu e SGmulti)
-têm um grau de similaridade acima da média (valor de $0,67$ para as duas agnósticas e
-entre $0,44$ e $0,58$ para as restantes), mas foram mantidas pela diversidade de
-princípios de funcionamento.
-Uma similaridade maior pode ser notada entre as variantes das estratégias
-baseadas em densidade.
-As seis propostas baseadas na \textit{utilidade de cada classe} (prefixos LU e ALU)
-apresentam uma similaridade aproximada de $0,7$ em relação aos seus
-algoritmos originais correspondentes (prefixos TU e ATU).
-Por esse motivo e pela correspondência direta entre as medidas de acurácia
-listadas nas tabelas do Apêndice \ref{detalhes},
-optou-se por excluí-las dos experimentos.
+As estratégias mais exploratórias (Rnd, Clu, ATU e SGmulti)
+têm entre si um grau de similaridade acima da média
+(valor de $0,63$ para as duas primeiras e entre $0,51$ e $0,59$ para as restantes,
+desconsiderando as variantes de ATU entre si).
+Rnd, Clu e SGmulti foram mantidas pelo seu valor referencial e histórico.
+Uma similaridade maior pode ser notada entre as variantes de cada estratégia
+baseada em densidade (ATU, GATU e TU).
 As estratégias remanescentes baseadas na distância euclidiana
 (TUeuc e ATUeuc) também foram excluídas
 por serem, de acordo com a Tabela \ref{stratDists},
 excessivamente similares às baseadas na distância de Manhattan.
 A distância euclidiana foi preterida porque as distâncias de Manhattan e de Mahalanobis
-em conjunto provêem mais diversidade ao experimento pela adequação a atributos nominais
-da primeira e pela independência de escala da segunda.
-Rnd e Clu foram mantidas por serem abordagens importantes na literatura.
+em conjunto proveem mais diversidade ao experimento pela adequação a atributos nominais
+da primeira e pela intrínseca independência de escala da segunda.
 Dentre as estratégias baseadas em simples medida de informatividade
 (Unc, Ent e Mar), apenas Mar foi mantida devido à similaridade entre
 as três, por ser mais adequada a problemas multiclasse que Unc e por
-seu desempenho ser superior ao da Ent.
+seu desempenho ser superior ao da Ent (Apêndice \ref{detalhes}).
+A estratégia DWeuc é a mais dissimilar devido a seu desempenho inferior,
+como demonstram os experimentos nas seções seguintes.
 
 O grupo reduzido de estratégias é apresentado na Tabela \ref{stratDistsRedux}.
-É possível notar nas duas tabelas que a adoção da distância de Mahalanobis
-(últimas colunas/linhas da tabela) confere o maior grau de diversidade dentre todas as estratégias.
-Apesar dessa particularidade e do alto desempenho reportado na próxima seção (\ref{analise}),
-não é do conhecimento do autor a existência de trabalhos que empreguem essa
-medida de distância.
-
-\ano{encurtar caption das duas tabelas}
 
 \newpage
-\input stratDistsRedux
+% \input stratDistsRedux
+\begin{table}[h]
+\caption{Similaridade entre estratégias selecionadas.
+\textit{Detalhes na Tabela \ref{passiveDists}.}}
+\begin{center}\scalebox{0.7}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc}
+    & \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} \\
+Rnd        & - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.57} & \textbf{  0.51} &   0.45 &   0.44 & \textbf{  0.56} &   0.36 &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.38 &   0.46 &   0.37 \\
+Clu     & \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} & \textbf{  0.52} &   0.49 &   0.48 & \textbf{  0.58} &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.40 & \textbf{  0.50} &   0.41 \\ \hline
+\textbf{ATUman} & \textbf{  0.57} & \textcolor{blue}{\textbf{  0.59}} & - & \textbf{  0.57} & \textbf{  0.50} &   0.47 & \textbf{  0.56} &   0.37 &   0.39 & \textcolor{red}{\textbf{  0.23}} &   0.42 &   0.41 &   0.46 &   0.37 \\
+\textbf{ATUmah} & \textbf{  0.51} & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.57}} & - &   0.45 & \textbf{  0.54} &   0.48 &   0.35 &   0.37 & \textcolor{red}{\textbf{  0.23}} &   0.39 &   0.44 &   0.43 &   0.36 \\ \hline
+\textbf{GATUman}        &   0.45 &   0.49 & \textbf{  0.50} &   0.45 & - & \textcolor{blue}{\textbf{  0.53}} &   0.48 &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.24}} &   0.47 &   0.42 &   0.46 &   0.39 \\
+\textbf{GATUmah}        &   0.44 &   0.48 &   0.47 & \textcolor{blue}{\textbf{  0.54}} & \textbf{  0.53} & - &   0.44 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.24}} &   0.42 &   0.48 &   0.43 &   0.37 \\ \hline
+\textbf{SGmulti}        & \textbf{  0.56} & \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.48 &   0.48 &   0.44 & - &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.25}} &   0.44 &   0.42 & \textbf{  0.50} &   0.39 \\
+Ent     &   0.36 &   0.38 &   0.37 &   0.35 &   0.40 &   0.37 &   0.40 & - & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.25}} &   0.46 &   0.42 &   0.41 &   0.34 \\ \hline
+Mar     &   0.36 &   0.39 &   0.39 &   0.37 &   0.42 &   0.38 &   0.42 & \textcolor{blue}{\textbf{  0.56}} & - & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.56}} &   0.46 &   0.44 &   0.36 \\
+DWeuc   &   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} &   0.24 &   0.24 & \textcolor{blue}{\textbf{  0.25}} & \textcolor{blue}{\textbf{  0.25}} &   0.24 & - &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.24 & \textcolor{red}{\textbf{  0.23}} \\ \hline
+TUman   &   0.38 &   0.41 &   0.42 &   0.39 &   0.47 &   0.42 &   0.44 &   0.46 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.24}} & - & \textbf{  0.51} &   0.44 &   0.37 \\
+TUmah   &   0.38 &   0.40 &   0.41 &   0.44 &   0.42 &   0.48 &   0.42 &   0.42 &   0.46 & \textcolor{red}{\textbf{  0.23}} & \textcolor{blue}{\textbf{  0.51}} & - &   0.41 &   0.35 \\ \hline
+EERacu  &   0.46 & \textcolor{blue}{\textbf{  0.50}} &   0.46 &   0.43 &   0.46 &   0.43 & \textcolor{blue}{\textbf{  0.50}} &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.24}} &   0.44 &   0.41 & - &   0.44 \\
+EERent  &   0.37 &   0.41 &   0.37 &   0.36 &   0.39 &   0.37 &   0.39 &   0.34 &   0.36 & \textcolor{red}{\textbf{  0.23}} &   0.37 &   0.35 & \textcolor{blue}{\textbf{  0.44}} & - \\
+\end{tabular}}
+\label{stratDistsRedux}
+\end{center}
+\end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input exp-analise
@@ -233,3 +278,9 @@ ajuda a saber que estratégias são boas p/ bases desbalanceadas.
 Dois tipos de \#topos-de-rank:
 com empate = \#vezes em que ficou entre os vencedores
 sem empate = \#vezes em que foi o vencedor}
+
+
+É possível notar nas duas tabelas que a adoção da distância de Mahalanobis
+Apesar dessa particularidade e do alto desempenho reportado
+na próxima seção (\ref{analise}), não é do conhecimento do
+autor a existência de trabalhos que empreguem essa medida de distância.
