--- a/stratDists.tex
+++ b/stratDists.tex
@@ -1,26 +1,22 @@
 \begin{table}[h]
-\caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,5$ estão em negrito.}
-\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|cc|cc|c}
- 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}Unc\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}EERent\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}\textbf{SGmulti}\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{LUeuc}\end{sideways} & \begin{sideways}\textbf{ALUeuc}\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{LUman}\end{sideways} & \begin{sideways}\textbf{ALUman}\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{LUmah}\end{sideways} & \begin{sideways}\textbf{ALUmah}\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.67}} &   0.38 &   0.38 &   0.39 &   0.47 & \textbf{  0.50} & \textbf{  0.58} &   0.25 &   0.39 & \textbf{  0.55} &   0.40 & \textbf{  0.57} &   0.39 & \textbf{  0.54} &   0.39 & \textbf{  0.54} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-Clu	& \textcolor{blue}{\textbf{  0.67}} & - &   0.38 &   0.37 &   0.38 &   0.48 & \textbf{  0.51} & \textbf{  0.56} &   0.25 &   0.40 & \textbf{  0.57} &   0.41 & \textbf{  0.60} &   0.40 & \textbf{  0.57} &   0.40 & \textbf{  0.58} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
-Unc	&   0.38 &   0.38 & - & \textcolor{blue}{\textbf{  0.65}} & \textbf{  0.62} &   0.40 &   0.40 &   0.40 &   0.28 &   0.49 &   0.36 &   0.49 &   0.36 &   0.48 &   0.35 &   0.48 &   0.35 &   0.21 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-Ent	&   0.38 &   0.37 & \textcolor{blue}{\textbf{  0.65}} & - & \textbf{  0.50} &   0.39 &   0.38 &   0.39 &   0.28 &   0.43 &   0.35 &   0.44 &   0.35 &   0.43 &   0.35 &   0.43 &   0.35 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\ \hline
-Mar	&   0.39 &   0.38 & \textcolor{blue}{\textbf{  0.62}} & \textbf{  0.50} & - &   0.41 &   0.42 &   0.40 &   0.27 & \textbf{  0.56} &   0.37 & \textbf{  0.56} &   0.37 & \textbf{  0.54} &   0.36 & \textbf{  0.53} &   0.36 &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} \\
-EERent	&   0.47 & \textcolor{blue}{\textbf{  0.48}} &   0.40 &   0.39 &   0.41 & - &   0.46 &   0.44 &   0.25 &   0.41 &   0.42 &   0.42 &   0.43 &   0.41 &   0.41 &   0.41 &   0.42 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\ \hline
-EERacu	& \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} &   0.40 &   0.38 &   0.42 &   0.46 & - &   0.47 &   0.25 &   0.41 &   0.45 &   0.42 &   0.45 &   0.41 &   0.44 &   0.41 &   0.45 & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{red}{\textbf{  0.21}} \\
-\textbf{SGmulti}	& \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} &   0.40 &   0.39 &   0.40 &   0.44 &   0.47 & - &   0.25 &   0.41 & \textbf{  0.51} &   0.42 & \textbf{  0.52} &   0.41 & \textbf{  0.51} &   0.41 & \textbf{  0.51} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\ \hline
-DWeuc	&   0.25 &   0.25 & \textcolor{blue}{\textbf{  0.28}} & \textcolor{blue}{\textbf{  0.28}} &   0.27 &   0.25 &   0.25 &   0.25 & - &   0.26 &   0.24 &   0.26 &   0.24 &   0.26 &   0.23 &   0.25 &   0.23 &   0.18 & \textcolor{red}{\textbf{  0.17}} &   0.18 & \textcolor{red}{\textbf{  0.17}} \\
-TUeuc	&   0.39 &   0.40 &   0.49 &   0.43 & \textbf{  0.56} &   0.41 &   0.41 &   0.41 &   0.26 & - &   0.40 & \textcolor{blue}{\textbf{  0.75}} &   0.39 & \textbf{  0.71} &   0.39 & \textbf{  0.67} &   0.39 &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-\textbf{ATUeuc}	& \textbf{  0.55} & \textbf{  0.57} &   0.36 &   0.35 &   0.37 &   0.42 &   0.45 & \textbf{  0.51} &   0.24 &   0.40 & - &   0.41 & \textbf{  0.72} &   0.40 & \textcolor{blue}{\textbf{  0.74}} &   0.40 & \textbf{  0.72} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-\textbf{LUeuc}	&   0.40 &   0.41 &   0.49 &   0.44 & \textbf{  0.56} &   0.42 &   0.42 &   0.42 &   0.26 & \textcolor{blue}{\textbf{  0.75}} &   0.41 & - &   0.41 & \textbf{  0.72} &   0.41 & \textbf{  0.70} &   0.41 &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-\textbf{ALUeuc}	& \textbf{  0.57} & \textbf{  0.60} &   0.36 &   0.35 &   0.37 &   0.43 &   0.45 & \textbf{  0.52} &   0.24 &   0.39 & \textcolor{blue}{\textbf{  0.72}} &   0.41 & - &   0.40 & \textbf{  0.70} &   0.40 & \textbf{  0.71} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-TUman	&   0.39 &   0.40 &   0.48 &   0.43 & \textbf{  0.54} &   0.41 &   0.41 &   0.41 &   0.26 & \textbf{  0.71} &   0.40 & \textbf{  0.72} &   0.40 & - &   0.40 & \textcolor{blue}{\textbf{  0.78}} &   0.40 &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-\textbf{ATUman}	& \textbf{  0.54} & \textbf{  0.57} &   0.35 &   0.35 &   0.36 &   0.41 &   0.44 & \textbf{  0.51} &   0.23 &   0.39 & \textbf{  0.74} &   0.41 & \textbf{  0.70} &   0.40 & - &   0.40 & \textcolor{blue}{\textbf{  0.77}} & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-\textbf{LUman}	&   0.39 &   0.40 &   0.48 &   0.43 & \textbf{  0.53} &   0.41 &   0.41 &   0.41 &   0.25 & \textbf{  0.67} &   0.40 & \textbf{  0.70} &   0.40 & \textcolor{blue}{\textbf{  0.78}} &   0.40 & - &   0.40 &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} \\ \hline
-\textbf{ALUman}	& \textbf{  0.54} & \textbf{  0.58} &   0.35 &   0.35 &   0.36 &   0.42 &   0.45 & \textbf{  0.51} &   0.23 &   0.39 & \textbf{  0.72} &   0.41 & \textbf{  0.71} &   0.40 & \textcolor{blue}{\textbf{  0.77}} &   0.40 & - & \textcolor{red}{\textbf{  0.20}} &   0.21 & \textcolor{red}{\textbf{  0.20}} &   0.21 \\
-TUmah	&   0.20 &   0.20 &   0.21 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 & - &   0.38 & \textcolor{blue}{\textbf{  0.71}} &   0.37 \\ \hline
-\textbf{ATUmah}	&   0.21 &   0.21 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.38 & - &   0.38 & \textcolor{blue}{\textbf{  0.69}} \\
-\textbf{LUmah}	&   0.20 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 &   0.20 & \textcolor{red}{\textbf{  0.18}} &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 & \textcolor{blue}{\textbf{  0.71}} &   0.38 & - &   0.38 \\ \hline
-\textbf{ALUmah}	&   0.21 &   0.21 &   0.20 &   0.20 &   0.20 &   0.21 &   0.21 &   0.21 & \textcolor{red}{\textbf{  0.17}} &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.20 &   0.21 &   0.37 & \textcolor{blue}{\textbf{  0.69}} &   0.38 & - \\\end{tabular}}\label{stratDists}
+\caption{Similaridade entre estratégias de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
+\begin{center}\scalebox{0.8}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|cc|c}
+ 				& \begin{sideways}Rnd\end{sideways} & \begin{sideways}Clu\end{sideways} & \begin{sideways}\textbf{ATUeuc}\end{sideways} & \begin{sideways}\textbf{ATUman}\end{sideways} & \begin{sideways}\textbf{ATUmah}\end{sideways} & \begin{sideways}\textbf{GATUeuc}\end{sideways} & \begin{sideways}\textbf{GATUman}\end{sideways} & \begin{sideways}\textbf{GATUmah}\end{sideways} & \begin{sideways}\textbf{SGmultic}\end{sideways} & \begin{sideways}Ent\end{sideways} & \begin{sideways}Mar\end{sideways} & \begin{sideways}DWeuc\end{sideways} & \begin{sideways}TUeuc\end{sideways} & \begin{sideways}TUman\end{sideways} & \begin{sideways}TUmah\end{sideways} & \begin{sideways}EERacu\end{sideways} & \begin{sideways}EERent\end{sideways} \\Rnd	& - & \textcolor{blue}{\textbf{  0.63}} & \textbf{  0.59} & \textbf{  0.57} & \textbf{  0.51} &   0.44 &   0.45 &   0.44 & \textbf{  0.56} &   0.36 &   0.36 & \textcolor{red}{\textbf{  0.24}} &   0.38 &   0.38 &   0.38 &   0.46 &   0.37 \\
+Clu	& \textcolor{blue}{\textbf{  0.63}} & - & \textbf{  0.59} & \textbf{  0.59} & \textbf{  0.52} &   0.48 &   0.49 &   0.48 & \textbf{  0.58} &   0.38 &   0.39 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.41 &   0.40 & \textbf{  0.50} &   0.41 \\ \hline
+\textbf{ATUeuc}	& \textbf{  0.59} & \textbf{  0.59} & - & \textcolor{blue}{\textbf{  0.74}} & \textbf{  0.57} &   0.47 &   0.48 &   0.47 & \textbf{  0.56} &   0.36 &   0.38 & \textcolor{red}{\textbf{  0.23}} &   0.41 &   0.41 &   0.41 &   0.45 &   0.36 \\
+\textbf{ATUman}	& \textbf{  0.57} & \textbf{  0.59} & \textcolor{blue}{\textbf{  0.74}} & - & \textbf{  0.57} &   0.48 & \textbf{  0.50} &   0.47 & \textbf{  0.56} &   0.37 &   0.39 & \textcolor{red}{\textbf{  0.23}} &   0.42 &   0.42 &   0.41 &   0.46 &   0.37 \\ \hline
+\textbf{ATUmah}	& \textbf{  0.51} & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.57}} & \textcolor{blue}{\textbf{  0.57}} & - &   0.44 &   0.45 & \textbf{  0.54} &   0.48 &   0.35 &   0.37 & \textcolor{red}{\textbf{  0.23}} &   0.39 &   0.39 &   0.44 &   0.43 &   0.36 \\
+\textbf{GATUeuc}	&   0.44 &   0.48 &   0.47 &   0.48 &   0.44 & - & \textcolor{blue}{\textbf{  0.70}} & \textbf{  0.52} &   0.47 &   0.41 &   0.43 & \textcolor{red}{\textbf{  0.24}} &   0.49 & \textbf{  0.50} &   0.45 &   0.45 &   0.38 \\ \hline
+\textbf{GATUman}	&   0.45 &   0.49 &   0.48 & \textbf{  0.50} &   0.45 & \textcolor{blue}{\textbf{  0.70}} & - & \textbf{  0.53} &   0.48 &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.24}} &   0.46 &   0.47 &   0.42 &   0.46 &   0.39 \\
+\textbf{GATUmah}	&   0.44 &   0.48 &   0.47 &   0.47 & \textcolor{blue}{\textbf{  0.54}} & \textbf{  0.52} & \textbf{  0.53} & - &   0.44 &   0.37 &   0.38 & \textcolor{red}{\textbf{  0.24}} &   0.41 &   0.42 &   0.48 &   0.43 &   0.37 \\ \hline
+\textbf{SGmultic}	& \textbf{  0.56} & \textcolor{blue}{\textbf{  0.58}} & \textbf{  0.56} & \textbf{  0.56} &   0.48 &   0.47 &   0.48 &   0.44 & - &   0.40 &   0.42 & \textcolor{red}{\textbf{  0.25}} &   0.44 &   0.44 &   0.42 & \textbf{  0.50} &   0.39 \\
+Ent	&   0.36 &   0.38 &   0.36 &   0.37 &   0.35 &   0.41 &   0.40 &   0.37 &   0.40 & - & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.25}} &   0.48 &   0.46 &   0.42 &   0.41 &   0.34 \\ \hline
+Mar	&   0.36 &   0.39 &   0.38 &   0.39 &   0.37 &   0.43 &   0.42 &   0.38 &   0.42 & \textbf{  0.56} & - & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.57}} & \textbf{  0.56} &   0.46 &   0.44 &   0.36 \\
+DWeuc	&   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.23}} &   0.24 &   0.24 &   0.24 & \textcolor{blue}{\textbf{  0.25}} & \textcolor{blue}{\textbf{  0.25}} &   0.24 & - &   0.24 &   0.24 & \textcolor{red}{\textbf{  0.23}} &   0.24 & \textcolor{red}{\textbf{  0.23}} \\ \hline
+TUeuc	&   0.38 &   0.41 &   0.41 &   0.42 &   0.39 &   0.49 &   0.46 &   0.41 &   0.44 &   0.48 & \textbf{  0.57} & \textcolor{red}{\textbf{  0.24}} & - & \textcolor{blue}{\textbf{  0.70}} & \textbf{  0.50} &   0.44 &   0.36 \\
+TUman	&   0.38 &   0.41 &   0.41 &   0.42 &   0.39 & \textbf{  0.50} &   0.47 &   0.42 &   0.44 &   0.46 & \textbf{  0.56} & \textcolor{red}{\textbf{  0.24}} & \textcolor{blue}{\textbf{  0.70}} & - & \textbf{  0.51} &   0.44 &   0.37 \\ \hline
+TUmah	&   0.38 &   0.40 &   0.41 &   0.41 &   0.44 &   0.45 &   0.42 &   0.48 &   0.42 &   0.42 &   0.46 & \textcolor{red}{\textbf{  0.23}} & \textbf{  0.50} & \textcolor{blue}{\textbf{  0.51}} & - &   0.41 &   0.35 \\
+EERacu	&   0.46 & \textcolor{blue}{\textbf{  0.50}} &   0.45 &   0.46 &   0.43 &   0.45 &   0.46 &   0.43 & \textcolor{blue}{\textbf{  0.50}} &   0.41 &   0.44 & \textcolor{red}{\textbf{  0.24}} &   0.44 &   0.44 &   0.41 & - &   0.44 \\ \hline
+EERent	&   0.37 &   0.41 &   0.36 &   0.37 &   0.36 &   0.38 &   0.39 &   0.37 &   0.39 &   0.34 &   0.36 & \textcolor{red}{\textbf{  0.23}} &   0.36 &   0.37 &   0.35 & \textcolor{blue}{\textbf{  0.44}} & - \\\end{tabular}}\label{stratDists}
 \end{center}
 \end{table}
